syntax = "proto3";

package vertis.broker.yops.tasks;

import "google/protobuf/timestamp.proto";

option java_package = "vertis.broker.yops.tasks";
option java_multiple_files = true;

message InnerMessage {
    int32 inner = 1;
}

message ArchiveMessageV1 {
    google.protobuf.Timestamp timestamp = 1;
    int32 num = 2;
}

message ArchiveMessageV2 {
    google.protobuf.Timestamp timestamp = 1;
    int32 num = 2;
    string str = 3;
    InnerMessage inner = 5;
}

message ArchiveMessageV3 {
    google.protobuf.Timestamp timestamp = 1;
    int32 num = 2;
    bool bool = 4;
    InnerMessage inner = 5;
}
